<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_menu_entities_header_title">Lists</string>
    <string name="nav_menu_tags_title">Tags</string>
    <string name="nav_menu_sources_title">Sources</string>
    <string name="nav_menu_series_title">Series</string>
    <string name="nav_menu_read_later_articles_title">Read later</string>
    <string name="nav_menu_article_summary_extractors_title">Newspaper Articles</string>
    <string name="nav_menu_device_management_title">Device management (to do)</string>
    <string name="nav_menu_settings_title">Settings (to do)</string>
    <string name="nav_menu_about_title">About (to do)</string>
    <string name="nav_menu_import_pdf">Import PDF</string>
    <string name="nav_menu_version_label">Version\u0020</string>
    <string name="floating_action_menu_create_item">Item</string>
    <string name="floating_action_menu_create_item_from_pdf">Item from PDF</string>
    <string name="floating_action_menu_add_newspaper_article">Newspaper Article</string>
    <string name="floating_action_button_add_article_of_newspaper">%s Article</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_share_link">Share link</string>
    <string name="action_share_content">Share content</string>
    <string name="action_share_content_as_html">Share content as html</string>
    <string name="action_view">View</string>
    <string name="action_read_article_later">Read later</string>
    <string name="action_website_view">Website</string>
    <string name="action_reader_view">Reader view</string>
    <string name="action_delete">Delete</string>
    <string name="action_reload">Reload</string>
    <string name="action_load_more">Load more</string>
    <string name="contextual_action_menu_count_items_selected" formatted="false">%d / %d</string>
    <string name="action_apply">Apply</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_never">Never</string>
    <string name="search_title">Search</string>
    <plurals name="search_count_results">
        <item quantity="one">%d result</item>
        <item quantity="other">%d results</item>
    </plurals>
    <string name="search_hint_items">Content, tags, source, date, series, …</string>
    <string name="search_hint_tags">Tag names</string>
    <string name="search_hint_sources">Source title, date, series, issue, …</string>
    <string name="search_hint_read_later_articles">Title, summary, date, series</string>
    <string name="activity_main_menu_show_article_preview_images">Show article preview images</string>
    <string name="activity_main_menu_use_dark_theme">Dark theme (experimental)</string>
    <string name="activity_main_menu_rebuild_search_index">Rebuild search index</string>
    <string name="fragment_items_list_view_menu_sort_title">Sort</string>
    <string name="fragment_items_list_view_menu_sort_by_date_created_ascending_title">Created ascending</string>
    <string name="fragment_items_list_view_menu_sort_by_date_created_descending_title">Created descending</string>
    <string name="fragment_items_list_view_menu_sort_by_preview_ascending_title">Content ascending</string>
    <string name="fragment_items_list_view_menu_sort_by_preview_descending_title">Content descending</string>
    <string name="fragment_items_list_view_menu_sort_by_source_preview_ascending_title">Source ascending</string>
    <string name="fragment_items_list_view_menu_sort_by_source_preview_descending_title">Source descending</string>
    <string name="loading">Loading …</string>
    <string name="open_file_permission_request_message">For importing PDF files, DeepThought needs permission to read files.</string>
    <string name="open_settings">Open settings</string>
    <string name="fragment_main_activity_tabs_filtered_entities_label">Filtered:</string>
    <string name="tab_items_onboarding_text"><![CDATA[
        <p>There are 3 ways to add content to DeepThought:</p>
        <p>For <b>own texts</b>, press the <b>(+) button</b> and select <b>Item</b>.</p>
        <p>To save a <b>Web page</b> select DeepThought in your browser\'s <b>Share menu</b> (in <img src=\"ic_more_vert_white_48dp\" /> / <img src=\"ic_share_white_48dp\" />).</p>
        To add a <b>newspaper article via RSS feed</b>, press the <b>(+) button</b> and select <b>Newspaper Article</b>.
    ]]></string>
    <string name="tab_tags_onboarding_text"><![CDATA[
        <p>Tags help you to organize your items and to find them faster.</p>
        <p>Select an item under the <b>Items</b> tab on the bottom left and add tags to it</p>
    ]]>
    </string>
    <string name="tab_source_onboarding_text"><![CDATA[
        <p>Add sources to your items to remember where you found the content.</p>
        <p>Select an item under the <b>Items</b> tab on the bottom left and add a source.</p>
    ]]>
    </string>
    <string name="tab_read_later_articles_onboarding_text"><![CDATA[
        <p>Articles for later reading are stored offline so that you can read them without internet connection. They are not yet part of your items collection.</p>
        <p>Press the <b>(+) button</b>, select <b>Newspaper Article</b> and press there on an article <b>Read later</b>.</p>
    ]]>
    </string>
    <string name="activity_edit_item_edit_content_onboarding_text"><![CDATA[
        Click here to create your content.
    ]]>
    </string>
    <string name="activity_edit_item_add_item_properties_onboarding_text"><![CDATA[
        Tap <b>(+) button</b> to set <b>tags</b>, <b>source</b> and <b>title</b>.
    ]]>
    </string>
    <string name="context_help_list_item_actions"><![CDATA[
        If you want to execute an action on only one item, swipe the item from right to left.<br />
        If you want to execute an action on multiple items, long press each item.<br />
        This also works for other lists.
    ]]>
    </string>
    <string name="context_help_search_tags"><![CDATA[
        To to select multiple keywords, separate them in the search field with a comma (,).
    ]]>
    </string>
    <string name="context_help_reader_view"><![CDATA[
        The page is now loaded. You can now switch to the reader view by pressing the button below in the middle of the toolbar.
    ]]>
    </string>
    <string name="context_help_item_content_fullscreen"><![CDATA[
        Scrolling item\'s content as you just did starts fullscreen mode.<br />
        You can leave it by simply tapping anywhere except on links and images in the screen.
    ]]>
    </string>
    <string name="context_help_item_content_fullscreen_gestures">You just performed one of the fullscreen gestures:\n\n- Fast swipe from right to left:
        Leave edit item view\n- Fast swipe from left to right: Edit item\'s tags\n- Double tap: Leave fullscreen view.
    </string>
    <string name="context_help_saved_read_later_article_is_now_in_items"><![CDATA[
        <p>The article got now saved in your items collection.</p>That means you now find it in <b>Items</b>, not in <b>Read later</b> anymore.
    ]]>
    </string>
    <string name="dialog_article_summary_extractors_add_extractor">Add</string>
    <string name="dialog_add_article_summary_extractor_news_page_url_label">Simply enter the address of a news page,
        e. g. \"nytimes.com\" or \"theguardian.com\", we will try to find the RSS feed for you.</string>
    <string name="dialog_add_article_summary_extractor_news_page_url_hint">e.g. nytimes.com or theguardian.com</string>
    <string name="dialog_add_article_summary_extractor_check_feed_or_website_url">Check</string>
    <string name="dialog_add_article_summary_extractor_found_feeds">Found feeds:</string>
    <string name="dialog_add_article_summary_extractor_recommended_feed_title_addition">(recommended)</string>
    <string name="error_no_rss_or_atom_feed_found_for_url" formatted="false">No RSS or Atom feed found for address %s</string>
    <string name="error_cannot_read_feed_or_extract_feed_addresses_from_url" formatted="false">Cannot read feed or extract feed addresses from %s: %s</string>
    <string name="dialog_article_summary_extractor_config_enter_name">Enter name:</string>
    <string name="dialog_article_summary_extractor_config_select_icon">Select icon:</string>
    <string name="dialog_article_summary_extractor_alert_message_delete_config" formatted="false">Really delete news site %s?</string>
    <string name="menu_share_source_url">Link</string>
    <string name="menu_share_item_content">Content</string>
    <string name="activity_edit_item_title">Item</string>
    <string name="activity_edit_item_content_label">Content</string>
    <string name="activity_edit_item_edit_content_title">Content</string>
    <string name="activity_edit_item_edit_content_hint">What do you want to keep (thought, note, quote, etc.)?</string>
    <string name="activity_edit_item_title_summary_label">Title / Summary</string>
    <string name="activity_edit_item_summary_only_label">Summary</string>
    <string name="activity_edit_item_edit_summary_title">Title / Summary</string>
    <string name="activity_edit_item_files_label">Files</string>
    <string name="activity_edit_item_edit_source_menu_edit_details">Edit details</string>
    <string name="activity_edit_item_edit_source_menu_create_new_entity">Create new one</string>
    <string name="activity_edit_item_edit_source_menu_remove_entity">Clear</string>
    <string name="activity_edit_item_tags_label">Tags</string>
    <string name="activity_edit_item_edit_tags_hint">Separate tags with comma, auto complete with Enter</string>
    <string name="activity_edit_item_tags_onboarding_text">Add meaningful tags, so that you can find it later easily</string>
    <string name="activity_edit_item_source_onboarding_text">Save where you have found this information (link, book)</string>
    <string name="activity_edit_item_summary_onboarding_text">Title or summary for this information</string>
    <string name="activity_edit_item_alert_message_item_contains_unsaved_changes">Item contains unsaved changes.\n\nShould these changes now get saved?</string>
    <string name="activity_edit_item_alert_message_item_has_been_edited">Item has been edited (probably on a synchronized device).\n\If
        you now save the item the other changes get overwritten.</string>
    <string name="activity_edit_item_alert_message_read_later_article_has_been_edited">Read later article has been edited (probably on a synchronized device).\n\If
        you now save the article these other changes get overwritten.</string>
    <string name="activity_edit_item_alert_message_delete_item">Would you really like to delete item \'%s\'?</string>
    <string name="menu_open_url_open_in_new_activity">Open in DeepThought</string>
    <string name="menu_open_url_with_other_app">Open with an app</string>
    <string name="menu_open_url_copy_url_to_clipboard">Copy URL to clipboard</string>
    <string name="activity_edit_source_title">Source</string>
    <string name="activity_edit_source_use_existing_label">Select existing source:</string>
    <string name="activity_edit_source_create_source">New …</string>
    <string name="activity_edit_source_create_source_from_isbn">From ISBN …</string>
    <string name="activity_edit_source_title_label">Source title</string>
    <string name="activity_edit_source_series_label">Series</string>
    <string name="activity_edit_source_issue_label">Issue</string>
    <string name="activity_edit_source_length_label">Length</string>
    <string name="edit_entity_source_field_share_url_menu_item_title">Share link</string>
</resources>