<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/nav_menu_entities_header_title">
        <menu>

            <item
                android:id="@+id/navTags"
                android:icon="@drawable/ic_tab_tags"
                android:title="@string/nav_menu_tags_title"/>

            <item
                android:id="@+id/navSources"
                android:icon="@drawable/ic_tab_sources"
                android:title="@string/nav_menu_sources_title"/>

            <item
                android:id="@+id/navSeries"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_menu_series_title"
                android:visible="false"
            />

            <item
                android:id="@+id/navReadLaterArticles"
                android:icon="@drawable/ic_tab_read_later_articles"
                android:title="@string/nav_menu_read_later_articles_title"/>

        </menu>
    </item>

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/navArticleSummaryExtractors"
            android:icon="@drawable/ic_newspaper_white_48dp"
            android:title="@string/nav_menu_article_summary_extractors_title"
        />

        <item
            android:id="@+id/navDeviceManagement"
            android:icon="@drawable/ic_android"
            android:title="@string/nav_menu_device_management_title"
            android:visible="false"
        />

        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_menu_settings_title"
            android:visible="false"
        />

        <item
            android:id="@+id/navAbout"
            android:title="@string/nav_menu_about_title"
            android:visible="false"
        />

    </group>

</menu>
