<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnEditDetails"
        android:title="@string/activity_edit_item_edit_source_menu_edit_details"
    />

    <item
        android:id="@+id/mnCreateNewEntity"
        android:title="@string/activity_edit_item_edit_source_menu_create_new_entity"
    />

    <item
        android:id="@+id/mnRemoveEntity"
        android:title="@string/activity_edit_item_edit_source_menu_remove_entity"
    />

    <item
        android:id="@+id/mnShareUrl"
        android:title="@string/edit_entity_source_field_share_url_menu_item_title"
        android:visible="false"
    />

    <!-- title gets set in source -->
    <item
        android:id="@+id/mnAddSecondaryInformation"
        android:title=""
        android:visible="false"
    />

</menu>