<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnToggleReaderMode"
        app:showAsAction="always"
        android:orderInCategory="100"
        android:title="@string/action_website_view"
        android:icon="@drawable/ic_reader_mode_disabled"
        app:actionLayout="@layout/contextual_action_mode_item_action_layout"
        android:visible="false"
    />

    <item
        android:id="@+id/mnDeleteReadLaterArticle"
        app:showAsAction="always"
        android:orderInCategory="200"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_48dp"
        app:actionLayout="@layout/contextual_action_mode_item_action_layout"
        android:visible="false"
    />

    <item
        android:id="@+id/mnSaveItemExtractionResultForLaterReading"
        app:showAsAction="always"
        android:orderInCategory="300"
        android:title="@string/action_read_article_later"
        android:icon="@drawable/ic_read_later_article_action"
        app:actionLayout="@layout/contextual_action_mode_item_action_layout"
        android:visible="false"
    />

    <item
        android:id="@+id/mnSaveItem"
        app:showAsAction="always"
        android:orderInCategory="500"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save_white_48dp"
        app:actionLayout="@layout/contextual_action_mode_item_action_layout"
        android:visible="false"
    />

    <item
        android:id="@+id/mnShareItem"
        app:showAsAction="never"
        android:orderInCategory="1000"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_white_48dp"
        app:actionLayout="@layout/contextual_action_mode_item_action_layout"
    />

    <item
        android:id="@+id/mnDeleteExistingItem"
        app:showAsAction="never"
        android:orderInCategory="2000"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_48dp"
        android:visible="false"
    />

</menu>